VQ-2467-n-VQ-2468:: Scheduler Creation Modal Modification

--- a/src/app/features/crm/components/scheduler/scheduler.component.css
+++ b/src/app/features/crm/components/scheduler/scheduler.component.css
@@ -50,6 +50,10 @@ fieldset legend {
   border: solid 1px red !important;
 }
 
+::ng-deep .template .p-dropdown-panel {
+  display: none !important;
+}
+
 .p-tooltip {
   background-color: red;
   z-index: 9999 !important;
