--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
@@ -280,21 +280,33 @@
     text-align: left;
     color: #000;
 }
+
 /* .textArea{
     height: 50px;
 } */
- .riskDetailsCards{
+.riskDetailsCards {
     border-color: transparent;
     border-radius: 5px;
- }
- .flexible-header {
+}
+
+.flexible-header {
     white-space: nowrap;
     width: auto;
     text-align: left;
 }
+
 /* .ui-datatable th, .ui-datatable td {
     white-space: nowrap;
 } */
-.ui-datatable th, .ui-datatable td {
+.ui-datatable th,
+.ui-datatable td {
     white-space: nowrap;
+}
+
+#applicableCommissionLabel {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 23.44px;
+    text-align: left;
+
 }
